--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"body-parser": "^1.19.2",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"inversify": "^6.0.1",
