--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
 		"body-parser": "^1.19.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
+		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"inversify": "^6.0.1",
+		"mongodb": "^4.4.1",
+		"mongoose": "^6.2.9",
 		"reflect-metadata": "^0.1.13",
 		"tslog": "^3.3.2"
 	},
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.2",
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
 		"@types/node": "^17.0.21",
 		"@typescript-eslint/eslint-plugin": "^5.15.0",
