--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "Andrei Savelyeu",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
@@ -22,16 +23,23 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"inversify": "^6.0.1",
+		"jsonwebtoken": "^8.5.1",
 		"mongodb": "^4.4.1",
 		"mongoose": "^6.2.9",
+		"nodemailer": "^6.7.3",
 		"reflect-metadata": "^0.1.13",
-		"tslog": "^3.3.2"
+		"tslog": "^3.3.2",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.8",
 		"@types/node": "^17.0.21",
+		"@types/nodemailer": "^6.4.4",
+		"@types/uuid": "^8.3.4",
 		"@typescript-eslint/eslint-plugin": "^5.15.0",
 		"@typescript-eslint/parser": "^5.15.0",
 		"eslint": "^8.11.0",
